z-index issue fixed in details page

--- a/src/components/DetailsPage.css
+++ b/src/components/DetailsPage.css
@@ -117,6 +117,7 @@
 .color {
   margin-top: 24px;
   width: 30%;
+  z-index: -1;
 }
 
 .img-back {
